fixes scrollbars

--- a/css/expdb.css
+++ b/css/expdb.css
@@ -673,7 +673,6 @@ select{
   width: -moz-calc(100% - 265px);
   width: -webkit-calc(100% - 265px);
   width: calc(100% - 265px);
-  height: 100vh;
 }
 
 .topborder{
